[BE] lentExtension 관련 비즈니스 로직 DB 쿼리에서 서비스단으로 이동 & users/me api 조회 시 내 연장권 여부 반영 안되는 버그 수정